@@ -15,7 +15,7 @@
       <id>central</id>
       <url>https://repo.maven.apache.org/maven2</url>
     </repository>
-  </repositories><build><plugins><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><configuration><source>17</source><target>17</target><compilerArgs>--enable-preview</compilerArgs></configuration></plugin></plugins></build>
+  </repositories>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
